2007-3-22 Patrick Galbraith <patg@grazr.com> (4.005)

* Fixed mysql_warning issue < 4.1 (reminers, patches, help from ROAM, (issue 25713)
* makerealclean patch from ROAM (issue #25714)
* sqlstate cleanup patch from ROAM
* Replaced all references to dbis to use imp_xxh per DBI best practices
* Fix to dbd_st_destroy - added back previously removed 'free everything' code which 
  had been moved to dbd_st_finish, causing a crash upon freeing of bind values 
  after all rows resulting from one execution of a query have been fetched. This meant
  that next attempt to execute the prepared statement would segfault. This
  work thanks to Rainer Weikusat!
* Removed all 'FindNewTable' calls in all tests. Just use 't1' for all tests to 
  simplify things. Plus, this is how MySQL internall tests.
* Better 'skip test' logic in some tests that were still running when they shouldn't 
  have been.



2007-3-22 Patrick Galbraith <patg@grazr.com> Jim Winstead <jimw@mysql.com> (4.004)
* Work around a bug in old 3.23 servers by specifying NOT NULL for fields used
  as a primary key in tests. (Bug #20325, reported by Julian Ladisch)
* Add support for mysql_warning_count statement handle attribute. (Bug #25457,
  patch from Philip Stoev)
* Add support for mysql_multi_statements connection option. (RT #12322, based
  on patch from Doug Morris)
* Had to bump to 4.003 do to print statement in mysql.pm that made it 
  into the dist. Even though you can delete a file on CPAN, you cannot 
  re-upload it if it's the same name. Mea Culpa.
* UTF8-Flag not set with flag mysql_enable_utf8 and column collation utf8_bin patch,
  Joost Diepenmaat, (RT #24738)
* Fixed do_error definition (Scott Hildreth, Tim Bunce)
* Conversion of test suite to Test::More

2007-3-5 Patrick Galbraith <patg@grazr.com> Jim Winstead <jimw@mysql.com> (4.003)
* Fix inclusion of non-primary keys in primary_key_info. (Bug #26786,
  reported and patch by Dave Rolsky)
