@@ -1,3 +1,23 @@
+eg/bug14979.pl
+eg/bug14979.trace
+eg/bug21028.pl
+eg/decimal_test.pl
+eg/issue21946.pl
+eg/proc1.trace
+eg/proc2.trace
+eg/proc_example2a.pl
+eg/proc_example2b.pl
+eg/proc_example4.pl
+t/25lockunlock.t
+t/35prepare.t.old
+t/40keyinfo.t
+t/40server_prepare.t
+t/40types.t
+t/65types.t
+t/insertid.t.bak
+t/test.pl
+t/test_data.txt
+t/warnings.t
 t/00base.t
 t/10connect.t
 t/20createdrop.t
